<resources>
    <string name="app_name">Collaborative Web Music</string>

    <string name="search_txt">Search</string>
    <string name="download">Download</string>
    <string name="download_sound">Download sound</string>
    <string name="not_found">Not Found</string>

    <string name="title_activity_settings">Settings</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <!-- Example settings for Preferences -->
    <string name="pref_api_title">API Config</string>
    <string name="pref_key_freesound_api_key_desc">Enter to http://freesound.org/api register and ask for the APIKEY</string>
    <string name="pref_key_freesound_api_key">Freesound API KEY</string>
    <string name="pref_apiType">Source API Web</string>
    <string name="pref_apiType_default">custom</string>
    <string name="action_config">Configure</string>
    <string name="pref_title_new_project_notifications">Notification</string>
    <string name="pref_summary_new_project_notifications">Notify if a new project was created</string>
    <string-array name="pref_apiType_entries">
        <item>Freesound</item>
        <item>RedPanal</item>
        <item>Propia</item>
    </string-array>

    <string-array name="pref_apiType_values">
        <item>freesound</item>
        <item>redpanal</item>
        <item>custom</item>
    </string-array>
    <string name="title_activity_mirstate">MIRStateActivity</string>
    <string name="pref_custom_url_desc">URL of custom service</string>
    <string name="pref_custom_url_key">URL Custom</string>
    <string name="pref_custom_url_default">http://localhost:5000</string>

    <string name="pref_key_default"></string>
    <string name="not_yet_available">Service not yet available</string>
    <string name="add">Add</string>
    <string name="title_activity_sign_in">Sign to Collaborative Web Music</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome_message">Welcome to the app</string>
    <string name="start">Start</string>
    <string name="id">ID</string>
    <string name="inharmonicity">Inharmonicity</string>
    <string name="spectral_centroid">SpectralCentroid</string>
    <string name="bpm">BPM</string>
    <string name="duration">Duration</string>
    <string name="download_error">Download error</string>
    <string name="file_downloaded_to">File downloaded to</string>
    <string name="desc_name">Name</string>
    <string name="license">License</string>
    <string name="description">Description</string>
    <string name="filename">Filename</string>
    <string name="added_to_db">Added to the Remote Database</string>
    <string name="server_db_path">server/songs/</string>
    <string name="action_search" >Search</string>
    <string name="action_location_map">Map location</string>
    <string name="action_listar">Song samples</string>
    <string name="legacy_server_key">AIzaSyC-dChkotKlGu3fo-rGDUep7Tj-vOo0Wv8</string>
    <string name="new_sample">New sample</string>
    <string name="new_sample_body">Listen</string>

</resources>
