<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_config"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/action_config"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_listar"
        android:enabled="true"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/action_listar"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/action_maps"
        android:enabled="true"
        android:title="@string/action_location_map"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/sign_out_menu"
        android:enabled="true"
        android:icon="@drawable/common_google_signin_btn_icon_disabled"
        android:title="@string/sign_out"
        android:visible="true" />
</menu>