<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ar.com.ordia.collaborativesamples.APICallActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="73dp"
        android:layout_height="49dp"
        android:text="@string/search_txt"
        app:layout_constraintLeft_toRightOf="@+id/editTextID"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewRespuesta"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="13dp"
        app:layout_constraintVertical_bias="0.51" />

    <TextView
        android:id="@+id/textViewRespuesta"
        android:layout_width="352dp"
        android:layout_height="350dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="3dp"
        android:text="Sound View"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDownload"
        android:layout_width="104dp"
        android:layout_height="50dp"
        android:text="@string/download"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewRespuesta"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toRightOf="@+id/buttonSearch"
        android:layout_marginLeft="8dp"
        tools:layout_editor_absoluteY="404dp" />

    <EditText
        android:id="@+id/editTextID"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="Id number"
        android:inputType="number"
        android:text="31362"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewRespuesta"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="409dp" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="73dp"
        android:layout_height="50dp"
        android:text="@string/add"
        app:layout_constraintLeft_toRightOf="@+id/buttonDownload"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewRespuesta"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        tools:layout_editor_absoluteY="405dp"
        tools:layout_editor_absoluteX="301dp"
        app:layout_constraintHorizontal_bias="0.6" />

</android.support.constraint.ConstraintLayout>
